<resources>
    <string name="app_name">COVID19 Tracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Dashboard</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="foo">Lorem Ipsum</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_data_statistik">Data Statistik</string>
    <string name="title_data_confirm">Data Terkonfirmasi</string>
    <string name="title_data_recovered">Data Sembuh</string>
    <string name="title_data_death">Data Meninggal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_confirm">Terkonfirmasi</string>
    <string name="title_recovered">Sembuh</string>
    <string name="title_deaths">Meninggal</string>
    <string name="title_live_data">Live Data</string>
    <string name="title_about">Tentang</string>
    <string name="title_name">Oratakashi Nhamako</string>
    <string name="position">Android Developer</string>
    <string name="title_description_apps">Contact Me?</string>
    <string name="title_email">Email : oratakashi@oratakashi.com</string>
    <string name="title_about_me">I just a software enginer with a billion dream, and I always hide in the dark so people don\'t know who I am, because I think people just enjoy my work without knowing who I am, because you don\'t need to be as handsome as you are, or how ugly you look, as long as your work is useful for others, you will be appreciated</string>
    <string name="title_about_mes">About Me?</string>
    <string name="title_data_source">Data Source?</string>
    <string name="title_contact_detail">If you have something to ask, or offer me a job, you can contact me below</string>
    <string name="title_source_code">Can I have the source code for this apps?</string>
    <string name="title_description_source_code">Of course, this application is open source and you may use, modify, and develop this application, you can download this source code at:</string>
    <string name="title_covid19">COVID19</string>
    <string name="title_tracker">Tracker</string>
    <string name="title_data_indonesia">Data Indonesia</string>
    <string name="title_description_maintence">Maaf sepertinya salah satu dari server provider data kami sedang perbaikan, jadi kami tidak dapat menampilkan data untuk sekarang, silahkan coba lagi nanti!</string>
    <string name="title_maintence">Sedang dalam perbaikan...</string>
    <string name="title_check_status">Cek Status</string>
    <string name="title_country_search">Cari Negara</string>
    <string name="title_sort_asc">Urutkan berdasarkan jumlah terkecil</string>
    <string name="title_sort_desc">Urutkan berdasarkan jumlah terbesar</string>
    <string name="title_sort_abjad">Urutkan berdasarkan abjad</string>
    <string name="title_sort_asc_confirm">Urutkan berdasarkan jumlah positif terkecil</string>
    <string name="title_sort_desc_confirm">Urutkan berdasarkan jumlah positif terbesar</string>
    <string name="title_sort_asc_recovered">Urutkan berdasarkan jumlah sembuh terkecil</string>
    <string name="title_sort_desc_recovered">Urutkan berdasarkan jumlah sembuh terbesar</string>
    <string name="title_sort_asc_death">Urutkan berdasarkan jumlah meninggal terkecil</string>
    <string name="title_sort_desc_death">Urutkan berdasarkan jumlah meninggal terbesar</string>
</resources>
