<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/dark_bg"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_hideable="false"
    app:cardCornerRadius="@dimen/radius_10"
    app:cardElevation="@dimen/elevation_8"
    app:behavior_peekHeight="270dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_10">
        <View
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_3"
            android:layout_gravity="center_horizontal"
            android:background="@color/line" />

        <View
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_3"
            android:layout_marginBottom="@dimen/padding_10"
            android:background="@color/line" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_dashboard"
            android:fontFamily="@font/bold"
            android:textAlignment="center"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/font_18"/>
        <HorizontalScrollView
            android:layout_marginTop="@dimen/margin_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/btnStatistik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_white"
                    android:text="@string/title_data_statistik"
                    android:fontFamily="@font/regular"
                    android:textSize="@dimen/font_14"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/btnConfirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_white"
                    android:text="@string/title_data_confirm"
                    android:fontFamily="@font/regular"
                    android:textSize="@dimen/font_14"
                    android:layout_marginStart="@dimen/margin_10"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/btnRecovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_white"
                    android:text="@string/title_data_recovered"
                    android:fontFamily="@font/regular"
                    android:textSize="@dimen/font_14"
                    android:layout_marginStart="@dimen/margin_10"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/btnDeaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_white"
                    android:text="@string/title_data_death"
                    android:fontFamily="@font/regular"
                    android:textSize="@dimen/font_14"
                    android:layout_marginStart="@dimen/margin_10"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/btnProvince"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_white"
                    android:text="@string/title_data_indonesia"
                    android:fontFamily="@font/regular"
                    android:textSize="@dimen/font_14"
                    android:layout_marginStart="@dimen/margin_10"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/btnAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_white"
                    android:text="@string/title_about"
                    android:fontFamily="@font/regular"
                    android:textSize="@dimen/font_14"
                    android:layout_marginStart="@dimen/margin_10"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </HorizontalScrollView>
        <FrameLayout
            android:id="@+id/flHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>