<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg"
    android:id="@+id/clBase"
    tools:context=".ui.statistik.StatistikFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/title_confirm"
        android:textColor="@color/grey"
        android:textSize="@dimen/font_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:fontFamily="@font/bold"
        android:text="@string/title_recovered"
        android:textColor="@color/grey"
        android:textSize="@dimen/font_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:fontFamily="@font/bold"
        android:text="@string/title_deaths"
        android:textColor="@color/grey"
        android:textSize="@dimen/font_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/foo"
        android:textColor="@color/grey"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRecovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:fontFamily="@font/regular"
        android:text="@string/foo"
        android:textColor="@color/green"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmed" />

    <TextView
        android:id="@+id/tvDeath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:fontFamily="@font/regular"
        android:text="@string/foo"
        android:textColor="@color/red"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecovered" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>