<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_bg"
    android:paddingTop="@dimen/padding_8"
    android:paddingBottom="@dimen/padding_8"
    android:paddingStart="@dimen/padding_10"
    android:paddingEnd="@dimen/padding_10"
    style="@style/AppBottomSheetDialogTheme"
    tools:context=".ui.sortirdialog.sort_indonesia.SortLocalFragment">
    <View
        android:layout_width="@dimen/size_50"
        android:layout_height="@dimen/size_3"
        android:background="@color/line"
        android:layout_gravity="center_horizontal"/>
    <View
        android:layout_width="@dimen/size_50"
        android:layout_height="@dimen/size_3"
        android:background="@color/line"
        android:layout_marginTop="@dimen/margin_3"
        android:layout_marginBottom="@dimen/padding_10"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:id="@+id/llAscConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/size_32"
            android:layout_height="@dimen/size_32"
            android:layout_marginBottom="@dimen/margin_10"
            android:src="@drawable/ic_sort_asc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_sort_asc_confirm"
            android:textSize="@dimen/font_14"
            android:fontFamily="@font/bold"
            android:textColor="@color/grey"
            android:layout_marginStart="@dimen/margin_10"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/llDescConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/size_32"
            android:layout_height="@dimen/size_32"
            android:layout_marginBottom="@dimen/margin_10"
            android:src="@drawable/ic_sort_desc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_sort_desc_confirm"
            android:textSize="@dimen/font_14"
            android:fontFamily="@font/bold"
            android:textColor="@color/grey"
            android:layout_marginStart="@dimen/margin_10"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/llAscRecovered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/size_32"
            android:layout_height="@dimen/size_32"
            android:layout_marginBottom="@dimen/margin_10"
            android:src="@drawable/ic_sort_asc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_sort_asc_recovered"
            android:textSize="@dimen/font_14"
            android:fontFamily="@font/bold"
            android:textColor="@color/grey"
            android:layout_marginStart="@dimen/margin_10"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/llDescRecovered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/size_32"
            android:layout_height="@dimen/size_32"
            android:layout_marginBottom="@dimen/margin_10"
            android:src="@drawable/ic_sort_desc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_sort_desc_recovered"
            android:textSize="@dimen/font_14"
            android:fontFamily="@font/bold"
            android:textColor="@color/grey"
            android:layout_marginStart="@dimen/margin_10"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/llAscDeath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/size_32"
            android:layout_height="@dimen/size_32"
            android:layout_marginBottom="@dimen/margin_10"
            android:src="@drawable/ic_sort_asc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_sort_asc_death"
            android:textSize="@dimen/font_14"
            android:fontFamily="@font/bold"
            android:textColor="@color/grey"
            android:layout_marginStart="@dimen/margin_10"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/llDescDeath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/size_32"
            android:layout_height="@dimen/size_32"
            android:layout_marginBottom="@dimen/margin_10"
            android:src="@drawable/ic_sort_desc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_sort_desc_death"
            android:textSize="@dimen/font_14"
            android:fontFamily="@font/bold"
            android:textColor="@color/grey"
            android:layout_marginStart="@dimen/margin_10"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/llAbjad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/size_32"
            android:layout_height="@dimen/size_32"
            android:src="@drawable/ic_sort_abjad"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_sort_abjad"
            android:textSize="@dimen/font_14"
            android:fontFamily="@font/bold"
            android:textColor="@color/grey"
            android:layout_marginStart="@dimen/margin_10"
            android:gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>